--- a/language/en-GB/en-GB.mod_bt_login.sys.ini
+++ b/language/en-GB/en-GB.mod_bt_login.sys.ini
@@ -10,7 +10,4 @@
 ; @note        All ini files need to be saved as UTF-8 - No BOM
 
 ; Ajouts par Sarki
-MOD_BT_LOGIN_XML_DESCRIPTION="<div class='bt_description'><h3>BT Login Module Version 4.0.0</h3>
-By <a href='https://brainforge.co.uk' target='_blank'>https://brainforge.co.uk</a> for Joomla 4.2.0 derived from BT Login Module Version 2.6.1 by <a href='http://bowthemes.com' target='_blank'>
-http://bowthemes.com</a>
-<p>BT Login module is alternate Joomla! login module with special styles associated and can be placed at various position, while you can retain the standard login module in the default position.</p>"
+MOD_BT_LOGIN_XML_DESCRIPTION="<div class='bt_description'><h3>BT Login Module Version 4.0.0</h3>By <a href='https://brainforge.co.uk' target='_blank'>https://brainforge.co.uk</a> for Joomla 4.2.0 derived from BT Login Module Version 2.6.1 by <a href='http://bowthemes.com' target='_blank'>http://bowthemes.com</a><p>BT Login module is alternate Joomla! login module with special styles associated and can be placed at various position, while you can retain the standard login module in the default position.</p>"
